test/errors/expr_conditional.py
x = 42 if 4 if 5 else 8 else 9
