test/errors/expr_conditional.py.expected
test/errors/expr_conditional.py:1 error: expected `else`, got `if`
test/errors/expr_conditional.py:1 error: expected new line, got `else`
